把菜品及验证码放入redis中缓存

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>2.1.0</version>
         </dependency>
 
+<!--       添加redis坐标作缓存-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <!--<build>
