--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,21 +4,57 @@ spring:
   application:
     #应用的名称 可选
     name: backhome_take_out
-  datasource:
-    druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/home?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-      username: root
-      password: 123456
+#  datasource:
+#    druid:
+#      driver-class-name: com.mysql.cj.jdbc.Driver
+#      url: jdbc:mysql://localhost:3306/home?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+#      username: root
+#      password: 123456
+  #主从复制+读写分离
+  shardingsphere:
+    datasource:
+      names:
+        master,slave    #主库，从库（从库可以有多个）
+      #主数据源
+      master:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://192.168.43.130:3306/reggie?useUnicode=true&characterEncoding=utf-8
+        username: root
+        password: 1234
+      #从数据源
+      slave:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://192.168.43.131:3306/reggie?useUnicode=true&characterEncoding=utf-8
+        username: root
+        password: 1234
+    masterslave:
+      #读写分离配置
+      load-balance-algorithm-type: round_robin   #多个从库的负载均衡方式 轮询
+      #最终数据源名称
+      name: dataSource
+      #指定主数据源名称
+      master-data-source-name: master
+      #从数据源名称列表，多个用逗号隔开
+      slave-data-source-names: slave
+    props:
+      sql:
+        show: true  #开启控制台sql显示 默认为flase
+  main:
+    allow-bean-definition-overriding: true  #允许bean定义覆盖
+
   #加入redis缓存配置文件
   redis:
-    host: 127.0.0.1
+    host: 192.168.43.130
     port: 6379
-    #password:
+    password: 1234
     database: 0
   cache:
     redis:
       time-to-live: 1800000   #设置缓存数据的过期时间
+
+
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
